AWS SDK for Java 1.8.5
This release updates the Amazon Route 53 client with enhanced support for health checks, adds support for self-service password rotation in the AWS Access and Identity Management client, and updates the AWS Support client with the ability to create attachments on support cases.